--- a/SpringBoot/빈 생명주기.md
+++ b/SpringBoot/빈 생명주기.md
@@ -75,7 +75,7 @@ public class BeanLifeCycleTest {
 
 어떤 결과가 나올까?
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/b862ba7a-6e6f-4c06-b612-087536bb9f65/12b1aeea-9519-403d-929f-d1419b338fbe/image.png)
+![image](https://github.com/user-attachments/assets/f9859b1f-4e56-4800-8768-d46d49341f93)
 
 결과는 다음과 같았다.
 
