--- a/SpringBoot/빈 스코프.md
+++ b/SpringBoot/빈 스코프.md
@@ -21,11 +21,11 @@
 
 프로토타입 스코프를 스프링 컨테이너에 조회하면 스프링 컨테이너는 항상 새로운 인스턴스를 생성해서 반환한다.
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/b862ba7a-6e6f-4c06-b612-087536bb9f65/2155ac3c-f6dd-4e3b-900f-25c5d8fa150a/image.png)
+![스크린샷 2024-09-05 143111](https://github.com/user-attachments/assets/54194059-8460-45d8-bb65-3109bdd18fa3)
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/b862ba7a-6e6f-4c06-b612-087536bb9f65/c6226e1b-b1cc-4adc-8fe0-aa04e672a1d1/image.png)
+![스크린샷 2024-09-05 143121](https://github.com/user-attachments/assets/3dc9e716-d947-455d-8a40-bcd96a4086d3)
 
-![image.png](https://prod-files-secure.s3.us-west-2.amazonaws.com/b862ba7a-6e6f-4c06-b612-087536bb9f65/0625fbac-7179-4f3d-9037-114ea1484a2f/image.png)
+![스크린샷 2024-09-05 143128](https://github.com/user-attachments/assets/8cb2334e-a9c2-4c5e-a9fb-a6af9d30e34c)
 
 <aside>
 💡
